tests/purs/failing/PASTrumpsKDNU5.purs
-- @shouldFailWith PartiallyAppliedSynonym
module Main where

import Prelude

newtype N = N ((~>) Array)
