tests/purs/failing/PASTrumpsKDNU5.out
Error found:
in module [33mMain[0m
at tests/purs/failing/PASTrumpsKDNU5.purs:6:16 - 6:26 (line 6, column 16 - line 6, column 26)

  Type synonym [33mData.NaturalTransformation.NaturalTransformation[0m is partially applied.
  Type synonyms must be applied to all of their type arguments.

while checking that type [33mNaturalTransformation Array[0m
  has kind [33mType[0m
in type constructor [33mN[0m

See https://github.com/purescript/documentation/blob/master/errors/PartiallyAppliedSynonym.md for more information,
or to contribute content related to this error.

